--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,7 @@
 :root {
     --main-color: blueviolet;
     --sec-color: white;
+    --footer-color: #313131;
 }
 
 @font-face {
@@ -15,6 +16,19 @@
 
 html {
     font-family: Oxygen;
+    scroll-behavior: smooth;
+}
+
+footer {
+    position: relative;
+    width: 100%;
+    margin-left: 0px;
+    font-size: 15px;
+    color: var(--sec-color);
+}
+
+p {
+    text-align: justify;
 }
 
 .text-align-center {
@@ -25,6 +39,7 @@ html {
     background-image: url("../img/background.jpg");
     width: 100%;
     height: 100%;
+    z-index: -999;
     position: fixed;
     top: 0;
     left: 0;
@@ -36,6 +51,7 @@ html {
 -----------------------------------------*/
 
 #barraSuperior {
+    z-index: 1;
     background-color: var(--sec-color);
     position: fixed;
     top: 0px;
@@ -58,6 +74,7 @@ html {
     padding-bottom: 10px;
     width: 150px;
     float: left;
+    transition: 0.3s;
 }
 
 .large {
@@ -75,6 +92,7 @@ html {
     text-decoration: none;
     display: block;
     padding: 8px;
+    transition: 0.3s;
 }
 
 .nav-bar-list-item:hover {
@@ -83,14 +101,6 @@ html {
 
 .nav-bar-list-item a:hover {
     color: var(--sec-color)
-}
-
-.active {
-    background-color: var(--main-color);
-}
-
-.active a {
-    color: var(--sec-color);
 }
 
 .icon-logo {
@@ -106,7 +116,6 @@ html {
 ---------------------------------------*/
 
 .row {
-    padding: 50px;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 10px;
@@ -115,33 +124,223 @@ html {
 
 
 /*------------------------------------------
-    PRIMERA SECCION
+    Banner
 ---------------------------------------------*/
 
 .image {
-    width: 450px;
+    width: 100%;
+    height: 100%;
 }
 
-#rightInfo {
-    margin: auto;
-    padding-left: 30px;
-    padding-right: 30px;
+.right-image {
+    margin-right: 0px;
     grid-column-start: 8;
     grid-column-end: 13;
 }
 
-#leftInfo {
+.left-image {
+    margin-right: 0px;
+    grid-column-start: 1;
+    grid-column-end: 6;
+}
+
+.info-container {
+    padding-top: 50px;
+    padding-bottom: 50px;
     padding-left: 30px;
     padding-right: 30px;
     color: var(--sec-color);
+}
+
+.right-info {
+    grid-column-start: 6;
+    grid-column-end: 13;
+}
+
+.left-info {
     grid-column-start: 1;
     grid-column-end: 8;
 }
 
-#banner {
+.componente {
     background-color: rgba(0, 0, 0, 0.5);
     position: relative;
-    margin-top: 70px;
     margin-right: 30px;
     margin-left: 30px;
+    margin-bottom: 50px;
+}
+
+#banner {
+    margin-top: 100px;
+}
+
+
+/*---------------------------------
+    Btn
+------------------------------------*/
+
+.bnt-container {
+    position: relative;
+    margin-top: 50px;
+}
+
+.btn {
+    font-size: 20px;
+    font-family: Oxygen-bold;
+    width: 300px;
+    height: 50px;
+    border-style: solid;
+    border-color: var(--main-color);
+    border-width: 5px;
+    border-radius: 30px;
+    color: var(--sec-color);
+    background-color: var(--main-color);
+    transition: 0.5s;
+}
+
+.btn:hover {
+    border-style: solid;
+    border-width: 5px;
+    background-color: rgba(0, 0, 0, 0);
+    color: var(--sec-color);
+    border-color: var(--sec-color);
+}
+
+
+/*-----------------------------
+    CARRUSEL
+--------------------------------*/
+
+* {
+    box-sizing: border-box
+}
+
+.slider-info {
+    padding-left: 50px;
+}
+
+.slider-image {
+    margin-top: 30px;
+}
+
+
+/* Slideshow container */
+
+.slideshow-container {
+    max-width: 95%;
+    position: relative;
+    margin: auto;
+}
+
+
+/* Hide the images by default */
+
+.mySlides {
+    display: none;
+}
+
+
+/* Next & previous buttons */
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+
+/* Position the "next button" to the right */
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+
+/* On hover, add a black background color with a little bit see-through */
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+/* Caption text */
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+
+/* The dots/bullets/indicators */
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
