--- a/css/estilo.css
+++ b/css/estilo.css
@@ -77,6 +77,15 @@ p {
     transition: 0.3s;
 }
 
+.nav-bar-list-item-right {
+    margin-right: 10px;
+    margin-left: 10px;
+    padding-top: 7px;
+    width: 150px;
+    float: right;
+    transition: 0.3s;
+}
+
 .large {
     font-family: Oxygen-bold;
     padding-top: 8px;
@@ -95,12 +104,31 @@ p {
     transition: 0.3s;
 }
 
+.nav-bar-list-item-right a {
+    color: var(--sec-color);
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    border-style: solid;
+    border-color: var(--main-color);
+    background-color: var(--main-color);
+    border-radius: 5px;
+    padding: 8px;
+    transition: 0.3s;
+}
+
 .nav-bar-list-item:hover {
     background-color: var(--main-color);
 }
 
 .nav-bar-list-item a:hover {
     color: var(--sec-color)
+}
+
+.nav-bar-list-item-right a:hover {
+    color: var(--main-color);
+    background-color: var(--sec-color);
+    border-color: var(--main-color);
 }
 
 .icon-logo {
@@ -324,7 +352,7 @@ p {
     transition: background-color 0.6s ease;
 }
 
-.active,
+.carrusel-active,
 .dot:hover {
     background-color: #717171;
 }
