--- a/css/estilo.css
+++ b/css/estilo.css
@@ -427,3 +427,87 @@ p {
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
+#login{
+    position: relative;
+    background: white;
+    top: 160px;
+}
+#crear{
+    position: relative;
+    background: white;
+    top: 95px;
+}
+.inicio{
+    text-align: center;
+    position: relative;
+    bottom: 20px;
+    font-size: 30px;
+    font-family: Oxygen-Bold;
+}
+.form {
+    position: relative;
+    background: #FFFFFF;
+    max-width: 350px;
+    margin: 0 auto;
+    padding: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    text-align: center;
+}
+.form .thumbnail {
+    background: blueviolet;
+    width: 150px;
+    height: 150px;
+    margin: 0 auto 30px;
+    padding: 50px 30px;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
+    border-bottom-left-radius: 100%;
+    border-bottom-right-radius: 100%;
+    box-sizing: border-box;
+}
+.form .thumbnail img {
+    display: block;
+    width: 100%;
+}
+.form input {
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+.form button {
+    outline: 0;
+    background: blueviolet;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    color: #FFFFFF;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+}
+.form .message {
+    margin: 15px 0 0;
+    color: #b3b3b3;
+    font-size: 12px;
+}
+.form .message a {
+    color: blueviolet;
+    text-decoration: none;
+}
